syntax = "proto3";

package saas.v1alpha1;

option go_package = "github.com/cisco-eti/phoenix-saas-be/api/saas/v1alpha1";

import "buf/validate/validate.proto";
import "core/v1alpha1/object.proto";
import "google/api/annotations.proto";
import "saas/v1alpha1/record.proto";
import "saas/v1alpha1/timestamp_range.proto";

message RecordFetch {
  repeated Record created = 1;
  repeated Record updated = 2;
  repeated Record deleted = 3;
}

message FetchRecordsRequest {
  repeated string record_types = 1;//agent,mcp,a2a
  TimestampRange time_range = 2;
  repeated string tenant_ids = 3;
}

message FetchRecordsResponse {
  optional RecordFetch agents = 1;
  optional RecordFetch mcp = 2;
  optional RecordFetch a2a = 3;
}

// This API should communicate with the Search Service
service SearchService {
  rpc FetchRecords(FetchRecordsRequest) returns (FetchRecordsResponse) {
    option (google.api.http) = {get: "/v1alpha1/records/fetch"};
  }
}
